Datamining Analyse supervisé (Knn et decision tree)

--- a/DM/TPS/TP5.ipynb
+++ b/DM/TPS/TP5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,165 +21,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[5.1, 3.5, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.9, 3.0, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.7, 3.2, 1.3, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.6, 3.1, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.6, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.4, 3.9, 1.7, 0.4, 'Iris-setosa\\n'],\n",
-       " [4.6, 3.4, 1.4, 0.3, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.4, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.4, 2.9, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
-       " [5.4, 3.7, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.8, 3.4, 1.6, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.8, 3.0, 1.4, 0.1, 'Iris-setosa\\n'],\n",
-       " [4.3, 3.0, 1.1, 0.1, 'Iris-setosa\\n'],\n",
-       " [5.8, 4.0, 1.2, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.7, 4.4, 1.5, 0.4, 'Iris-setosa\\n'],\n",
-       " [5.4, 3.9, 1.3, 0.4, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.5, 1.4, 0.3, 'Iris-setosa\\n'],\n",
-       " [5.7, 3.8, 1.7, 0.3, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.8, 1.5, 0.3, 'Iris-setosa\\n'],\n",
-       " [5.4, 3.4, 1.7, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.7, 1.5, 0.4, 'Iris-setosa\\n'],\n",
-       " [4.6, 3.6, 1.0, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.3, 1.7, 0.5, 'Iris-setosa\\n'],\n",
-       " [4.8, 3.4, 1.9, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.0, 1.6, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.4, 1.6, 0.4, 'Iris-setosa\\n'],\n",
-       " [5.2, 3.5, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.2, 3.4, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.7, 3.2, 1.6, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.8, 3.1, 1.6, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.4, 3.4, 1.5, 0.4, 'Iris-setosa\\n'],\n",
-       " [5.2, 4.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
-       " [5.5, 4.2, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.2, 1.2, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.5, 3.5, 1.3, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
-       " [4.4, 3.0, 1.3, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.4, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.5, 1.3, 0.3, 'Iris-setosa\\n'],\n",
-       " [4.5, 2.3, 1.3, 0.3, 'Iris-setosa\\n'],\n",
-       " [4.4, 3.2, 1.3, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.5, 1.6, 0.6, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.8, 1.9, 0.4, 'Iris-setosa\\n'],\n",
-       " [4.8, 3.0, 1.4, 0.3, 'Iris-setosa\\n'],\n",
-       " [5.1, 3.8, 1.6, 0.2, 'Iris-setosa\\n'],\n",
-       " [4.6, 3.2, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.3, 3.7, 1.5, 0.2, 'Iris-setosa\\n'],\n",
-       " [5.0, 3.3, 1.4, 0.2, 'Iris-setosa\\n'],\n",
-       " [7.0, 3.2, 4.7, 1.4, 'Iris-versicolor\\n'],\n",
-       " [6.4, 3.2, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
-       " [6.9, 3.1, 4.9, 1.5, 'Iris-versicolor\\n'],\n",
-       " [5.5, 2.3, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.5, 2.8, 4.6, 1.5, 'Iris-versicolor\\n'],\n",
-       " [5.7, 2.8, 4.5, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.3, 3.3, 4.7, 1.6, 'Iris-versicolor\\n'],\n",
-       " [4.9, 2.4, 3.3, 1.0, 'Iris-versicolor\\n'],\n",
-       " [6.6, 2.9, 4.6, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.2, 2.7, 3.9, 1.4, 'Iris-versicolor\\n'],\n",
-       " [5.0, 2.0, 3.5, 1.0, 'Iris-versicolor\\n'],\n",
-       " [5.9, 3.0, 4.2, 1.5, 'Iris-versicolor\\n'],\n",
-       " [6.0, 2.2, 4.0, 1.0, 'Iris-versicolor\\n'],\n",
-       " [6.1, 2.9, 4.7, 1.4, 'Iris-versicolor\\n'],\n",
-       " [5.6, 2.9, 3.6, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.7, 3.1, 4.4, 1.4, 'Iris-versicolor\\n'],\n",
-       " [5.6, 3.0, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
-       " [5.8, 2.7, 4.1, 1.0, 'Iris-versicolor\\n'],\n",
-       " [6.2, 2.2, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
-       " [5.6, 2.5, 3.9, 1.1, 'Iris-versicolor\\n'],\n",
-       " [5.9, 3.2, 4.8, 1.8, 'Iris-versicolor\\n'],\n",
-       " [6.1, 2.8, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.3, 2.5, 4.9, 1.5, 'Iris-versicolor\\n'],\n",
-       " [6.1, 2.8, 4.7, 1.2, 'Iris-versicolor\\n'],\n",
-       " [6.4, 2.9, 4.3, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.6, 3.0, 4.4, 1.4, 'Iris-versicolor\\n'],\n",
-       " [6.8, 2.8, 4.8, 1.4, 'Iris-versicolor\\n'],\n",
-       " [6.7, 3.0, 5.0, 1.7, 'Iris-versicolor\\n'],\n",
-       " [6.0, 2.9, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
-       " [5.7, 2.6, 3.5, 1.0, 'Iris-versicolor\\n'],\n",
-       " [5.5, 2.4, 3.8, 1.1, 'Iris-versicolor\\n'],\n",
-       " [5.5, 2.4, 3.7, 1.0, 'Iris-versicolor\\n'],\n",
-       " [5.8, 2.7, 3.9, 1.2, 'Iris-versicolor\\n'],\n",
-       " [6.0, 2.7, 5.1, 1.6, 'Iris-versicolor\\n'],\n",
-       " [5.4, 3.0, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
-       " [6.0, 3.4, 4.5, 1.6, 'Iris-versicolor\\n'],\n",
-       " [6.7, 3.1, 4.7, 1.5, 'Iris-versicolor\\n'],\n",
-       " [6.3, 2.3, 4.4, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.6, 3.0, 4.1, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.5, 2.5, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.5, 2.6, 4.4, 1.2, 'Iris-versicolor\\n'],\n",
-       " [6.1, 3.0, 4.6, 1.4, 'Iris-versicolor\\n'],\n",
-       " [5.8, 2.6, 4.0, 1.2, 'Iris-versicolor\\n'],\n",
-       " [5.0, 2.3, 3.3, 1.0, 'Iris-versicolor\\n'],\n",
-       " [5.6, 2.7, 4.2, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.7, 3.0, 4.2, 1.2, 'Iris-versicolor\\n'],\n",
-       " [5.7, 2.9, 4.2, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.2, 2.9, 4.3, 1.3, 'Iris-versicolor\\n'],\n",
-       " [5.1, 2.5, 3.0, 1.1, 'Iris-versicolor\\n'],\n",
-       " [5.7, 2.8, 4.1, 1.3, 'Iris-versicolor\\n'],\n",
-       " [6.3, 3.3, 6.0, 2.5, 'Iris-virginica\\n'],\n",
-       " [5.8, 2.7, 5.1, 1.9, 'Iris-virginica\\n'],\n",
-       " [7.1, 3.0, 5.9, 2.1, 'Iris-virginica\\n'],\n",
-       " [6.3, 2.9, 5.6, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.5, 3.0, 5.8, 2.2, 'Iris-virginica\\n'],\n",
-       " [7.6, 3.0, 6.6, 2.1, 'Iris-virginica\\n'],\n",
-       " [4.9, 2.5, 4.5, 1.7, 'Iris-virginica\\n'],\n",
-       " [7.3, 2.9, 6.3, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.7, 2.5, 5.8, 1.8, 'Iris-virginica\\n'],\n",
-       " [7.2, 3.6, 6.1, 2.5, 'Iris-virginica\\n'],\n",
-       " [6.5, 3.2, 5.1, 2.0, 'Iris-virginica\\n'],\n",
-       " [6.4, 2.7, 5.3, 1.9, 'Iris-virginica\\n'],\n",
-       " [6.8, 3.0, 5.5, 2.1, 'Iris-virginica\\n'],\n",
-       " [5.7, 2.5, 5.0, 2.0, 'Iris-virginica\\n'],\n",
-       " [5.8, 2.8, 5.1, 2.4, 'Iris-virginica\\n'],\n",
-       " [6.4, 3.2, 5.3, 2.3, 'Iris-virginica\\n'],\n",
-       " [6.5, 3.0, 5.5, 1.8, 'Iris-virginica\\n'],\n",
-       " [7.7, 3.8, 6.7, 2.2, 'Iris-virginica\\n'],\n",
-       " [7.7, 2.6, 6.9, 2.3, 'Iris-virginica\\n'],\n",
-       " [6.0, 2.2, 5.0, 1.5, 'Iris-virginica\\n'],\n",
-       " [6.9, 3.2, 5.7, 2.3, 'Iris-virginica\\n'],\n",
-       " [5.6, 2.8, 4.9, 2.0, 'Iris-virginica\\n'],\n",
-       " [7.7, 2.8, 6.7, 2.0, 'Iris-virginica\\n'],\n",
-       " [6.3, 2.7, 4.9, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.7, 3.3, 5.7, 2.1, 'Iris-virginica\\n'],\n",
-       " [7.2, 3.2, 6.0, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.2, 2.8, 4.8, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.1, 3.0, 4.9, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.4, 2.8, 5.6, 2.1, 'Iris-virginica\\n'],\n",
-       " [7.2, 3.0, 5.8, 1.6, 'Iris-virginica\\n'],\n",
-       " [7.4, 2.8, 6.1, 1.9, 'Iris-virginica\\n'],\n",
-       " [7.9, 3.8, 6.4, 2.0, 'Iris-virginica\\n'],\n",
-       " [6.4, 2.8, 5.6, 2.2, 'Iris-virginica\\n'],\n",
-       " [6.3, 2.8, 5.1, 1.5, 'Iris-virginica\\n'],\n",
-       " [6.1, 2.6, 5.6, 1.4, 'Iris-virginica\\n'],\n",
-       " [7.7, 3.0, 6.1, 2.3, 'Iris-virginica\\n'],\n",
-       " [6.3, 3.4, 5.6, 2.4, 'Iris-virginica\\n'],\n",
-       " [6.4, 3.1, 5.5, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.0, 3.0, 4.8, 1.8, 'Iris-virginica\\n'],\n",
-       " [6.9, 3.1, 5.4, 2.1, 'Iris-virginica\\n'],\n",
-       " [6.7, 3.1, 5.6, 2.4, 'Iris-virginica\\n'],\n",
-       " [6.9, 3.1, 5.1, 2.3, 'Iris-virginica\\n'],\n",
-       " [5.8, 2.7, 5.1, 1.9, 'Iris-virginica\\n'],\n",
-       " [6.8, 3.2, 5.9, 2.3, 'Iris-virginica\\n'],\n",
-       " [6.7, 3.3, 5.7, 2.5, 'Iris-virginica\\n'],\n",
-       " [6.7, 3.0, 5.2, 2.3, 'Iris-virginica\\n'],\n",
-       " [6.3, 2.5, 5.0, 1.9, 'Iris-virginica\\n'],\n",
-       " [6.5, 3.0, 5.2, 2.0, 'Iris-virginica\\n'],\n",
-       " [6.2, 3.4, 5.4, 2.3, 'Iris-virginica\\n'],\n",
-       " [5.9, 3.0, 5.1, 1.8, 'Iris-virginica\\n']]"
+       "[[5.1, 3.5, 1.4, 0.2, 0],\n",
+       " [4.9, 3.0, 1.4, 0.2, 0],\n",
+       " [4.7, 3.2, 1.3, 0.2, 0],\n",
+       " [4.6, 3.1, 1.5, 0.2, 0],\n",
+       " [5.0, 3.6, 1.4, 0.2, 0],\n",
+       " [5.4, 3.9, 1.7, 0.4, 0],\n",
+       " [4.6, 3.4, 1.4, 0.3, 0],\n",
+       " [5.0, 3.4, 1.5, 0.2, 0],\n",
+       " [4.4, 2.9, 1.4, 0.2, 0],\n",
+       " [4.9, 3.1, 1.5, 0.1, 0],\n",
+       " [5.4, 3.7, 1.5, 0.2, 0],\n",
+       " [4.8, 3.4, 1.6, 0.2, 0],\n",
+       " [4.8, 3.0, 1.4, 0.1, 0],\n",
+       " [4.3, 3.0, 1.1, 0.1, 0],\n",
+       " [5.8, 4.0, 1.2, 0.2, 0],\n",
+       " [5.7, 4.4, 1.5, 0.4, 0],\n",
+       " [5.4, 3.9, 1.3, 0.4, 0],\n",
+       " [5.1, 3.5, 1.4, 0.3, 0],\n",
+       " [5.7, 3.8, 1.7, 0.3, 0],\n",
+       " [5.1, 3.8, 1.5, 0.3, 0],\n",
+       " [5.4, 3.4, 1.7, 0.2, 0],\n",
+       " [5.1, 3.7, 1.5, 0.4, 0],\n",
+       " [4.6, 3.6, 1.0, 0.2, 0],\n",
+       " [5.1, 3.3, 1.7, 0.5, 0],\n",
+       " [4.8, 3.4, 1.9, 0.2, 0],\n",
+       " [5.0, 3.0, 1.6, 0.2, 0],\n",
+       " [5.0, 3.4, 1.6, 0.4, 0],\n",
+       " [5.2, 3.5, 1.5, 0.2, 0],\n",
+       " [5.2, 3.4, 1.4, 0.2, 0],\n",
+       " [4.7, 3.2, 1.6, 0.2, 0],\n",
+       " [4.8, 3.1, 1.6, 0.2, 0],\n",
+       " [5.4, 3.4, 1.5, 0.4, 0],\n",
+       " [5.2, 4.1, 1.5, 0.1, 0],\n",
+       " [5.5, 4.2, 1.4, 0.2, 0],\n",
+       " [4.9, 3.1, 1.5, 0.1, 0],\n",
+       " [5.0, 3.2, 1.2, 0.2, 0],\n",
+       " [5.5, 3.5, 1.3, 0.2, 0],\n",
+       " [4.9, 3.1, 1.5, 0.1, 0],\n",
+       " [4.4, 3.0, 1.3, 0.2, 0],\n",
+       " [5.1, 3.4, 1.5, 0.2, 0],\n",
+       " [5.0, 3.5, 1.3, 0.3, 0],\n",
+       " [4.5, 2.3, 1.3, 0.3, 0],\n",
+       " [4.4, 3.2, 1.3, 0.2, 0],\n",
+       " [5.0, 3.5, 1.6, 0.6, 0],\n",
+       " [5.1, 3.8, 1.9, 0.4, 0],\n",
+       " [4.8, 3.0, 1.4, 0.3, 0],\n",
+       " [5.1, 3.8, 1.6, 0.2, 0],\n",
+       " [4.6, 3.2, 1.4, 0.2, 0],\n",
+       " [5.3, 3.7, 1.5, 0.2, 0],\n",
+       " [5.0, 3.3, 1.4, 0.2, 0],\n",
+       " [7.0, 3.2, 4.7, 1.4, 1],\n",
+       " [6.4, 3.2, 4.5, 1.5, 1],\n",
+       " [6.9, 3.1, 4.9, 1.5, 1],\n",
+       " [5.5, 2.3, 4.0, 1.3, 1],\n",
+       " [6.5, 2.8, 4.6, 1.5, 1],\n",
+       " [5.7, 2.8, 4.5, 1.3, 1],\n",
+       " [6.3, 3.3, 4.7, 1.6, 1],\n",
+       " [4.9, 2.4, 3.3, 1.0, 1],\n",
+       " [6.6, 2.9, 4.6, 1.3, 1],\n",
+       " [5.2, 2.7, 3.9, 1.4, 1],\n",
+       " [5.0, 2.0, 3.5, 1.0, 1],\n",
+       " [5.9, 3.0, 4.2, 1.5, 1],\n",
+       " [6.0, 2.2, 4.0, 1.0, 1],\n",
+       " [6.1, 2.9, 4.7, 1.4, 1],\n",
+       " [5.6, 2.9, 3.6, 1.3, 1],\n",
+       " [6.7, 3.1, 4.4, 1.4, 1],\n",
+       " [5.6, 3.0, 4.5, 1.5, 1],\n",
+       " [5.8, 2.7, 4.1, 1.0, 1],\n",
+       " [6.2, 2.2, 4.5, 1.5, 1],\n",
+       " [5.6, 2.5, 3.9, 1.1, 1],\n",
+       " [5.9, 3.2, 4.8, 1.8, 1],\n",
+       " [6.1, 2.8, 4.0, 1.3, 1],\n",
+       " [6.3, 2.5, 4.9, 1.5, 1],\n",
+       " [6.1, 2.8, 4.7, 1.2, 1],\n",
+       " [6.4, 2.9, 4.3, 1.3, 1],\n",
+       " [6.6, 3.0, 4.4, 1.4, 1],\n",
+       " [6.8, 2.8, 4.8, 1.4, 1],\n",
+       " [6.7, 3.0, 5.0, 1.7, 1],\n",
+       " [6.0, 2.9, 4.5, 1.5, 1],\n",
+       " [5.7, 2.6, 3.5, 1.0, 1],\n",
+       " [5.5, 2.4, 3.8, 1.1, 1],\n",
+       " [5.5, 2.4, 3.7, 1.0, 1],\n",
+       " [5.8, 2.7, 3.9, 1.2, 1],\n",
+       " [6.0, 2.7, 5.1, 1.6, 1],\n",
+       " [5.4, 3.0, 4.5, 1.5, 1],\n",
+       " [6.0, 3.4, 4.5, 1.6, 1],\n",
+       " [6.7, 3.1, 4.7, 1.5, 1],\n",
+       " [6.3, 2.3, 4.4, 1.3, 1],\n",
+       " [5.6, 3.0, 4.1, 1.3, 1],\n",
+       " [5.5, 2.5, 4.0, 1.3, 1],\n",
+       " [5.5, 2.6, 4.4, 1.2, 1],\n",
+       " [6.1, 3.0, 4.6, 1.4, 1],\n",
+       " [5.8, 2.6, 4.0, 1.2, 1],\n",
+       " [5.0, 2.3, 3.3, 1.0, 1],\n",
+       " [5.6, 2.7, 4.2, 1.3, 1],\n",
+       " [5.7, 3.0, 4.2, 1.2, 1],\n",
+       " [5.7, 2.9, 4.2, 1.3, 1],\n",
+       " [6.2, 2.9, 4.3, 1.3, 1],\n",
+       " [5.1, 2.5, 3.0, 1.1, 1],\n",
+       " [5.7, 2.8, 4.1, 1.3, 1],\n",
+       " [6.3, 3.3, 6.0, 2.5, 2],\n",
+       " [5.8, 2.7, 5.1, 1.9, 2],\n",
+       " [7.1, 3.0, 5.9, 2.1, 2],\n",
+       " [6.3, 2.9, 5.6, 1.8, 2],\n",
+       " [6.5, 3.0, 5.8, 2.2, 2],\n",
+       " [7.6, 3.0, 6.6, 2.1, 2],\n",
+       " [4.9, 2.5, 4.5, 1.7, 2],\n",
+       " [7.3, 2.9, 6.3, 1.8, 2],\n",
+       " [6.7, 2.5, 5.8, 1.8, 2],\n",
+       " [7.2, 3.6, 6.1, 2.5, 2],\n",
+       " [6.5, 3.2, 5.1, 2.0, 2],\n",
+       " [6.4, 2.7, 5.3, 1.9, 2],\n",
+       " [6.8, 3.0, 5.5, 2.1, 2],\n",
+       " [5.7, 2.5, 5.0, 2.0, 2],\n",
+       " [5.8, 2.8, 5.1, 2.4, 2],\n",
+       " [6.4, 3.2, 5.3, 2.3, 2],\n",
+       " [6.5, 3.0, 5.5, 1.8, 2],\n",
+       " [7.7, 3.8, 6.7, 2.2, 2],\n",
+       " [7.7, 2.6, 6.9, 2.3, 2],\n",
+       " [6.0, 2.2, 5.0, 1.5, 2],\n",
+       " [6.9, 3.2, 5.7, 2.3, 2],\n",
+       " [5.6, 2.8, 4.9, 2.0, 2],\n",
+       " [7.7, 2.8, 6.7, 2.0, 2],\n",
+       " [6.3, 2.7, 4.9, 1.8, 2],\n",
+       " [6.7, 3.3, 5.7, 2.1, 2],\n",
+       " [7.2, 3.2, 6.0, 1.8, 2],\n",
+       " [6.2, 2.8, 4.8, 1.8, 2],\n",
+       " [6.1, 3.0, 4.9, 1.8, 2],\n",
+       " [6.4, 2.8, 5.6, 2.1, 2],\n",
+       " [7.2, 3.0, 5.8, 1.6, 2],\n",
+       " [7.4, 2.8, 6.1, 1.9, 2],\n",
+       " [7.9, 3.8, 6.4, 2.0, 2],\n",
+       " [6.4, 2.8, 5.6, 2.2, 2],\n",
+       " [6.3, 2.8, 5.1, 1.5, 2],\n",
+       " [6.1, 2.6, 5.6, 1.4, 2],\n",
+       " [7.7, 3.0, 6.1, 2.3, 2],\n",
+       " [6.3, 3.4, 5.6, 2.4, 2],\n",
+       " [6.4, 3.1, 5.5, 1.8, 2],\n",
+       " [6.0, 3.0, 4.8, 1.8, 2],\n",
+       " [6.9, 3.1, 5.4, 2.1, 2],\n",
+       " [6.7, 3.1, 5.6, 2.4, 2],\n",
+       " [6.9, 3.1, 5.1, 2.3, 2],\n",
+       " [5.8, 2.7, 5.1, 1.9, 2],\n",
+       " [6.8, 3.2, 5.9, 2.3, 2],\n",
+       " [6.7, 3.3, 5.7, 2.5, 2],\n",
+       " [6.7, 3.0, 5.2, 2.3, 2],\n",
+       " [6.3, 2.5, 5.0, 1.9, 2],\n",
+       " [6.5, 3.0, 5.2, 2.0, 2],\n",
+       " [6.2, 3.4, 5.4, 2.3, 2],\n",
+       " [5.9, 3.0, 5.1, 1.8, 2]]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,12 @@
     "            try:\n",
     "                Line.append(float(x))\n",
     "            except:\n",
-    "                Line.append(x)\n",
+    "                if x ==\"Iris-setosa\\n\":\n",
+    "                    Line.append(0)\n",
+    "                elif x ==\"Iris-versicolor\\n\":\n",
+    "                    Line.append(1)\n",
+    "                elif x ==\"Iris-virginica\\n\":\n",
+    "                    Line.append(2)\n",
     "        arr.append(Line)\n",
     "    return arr\n",
     "\n",
@@ -214,12 +219,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class Knn:\n",
     "    def __init__(self,data):\n",
     "        self.data = data\n",
@@ -306,8 +309,22 @@
     "    def getK(self,distances,k):\n",
     "        return sorted(distances.items(), key=lambda t: t[1])[:k]\n",
     "    \n",
-    "    def getClass(self,distances):\n",
+    "    def getClass(self,elem,algo=\"euclidienne\",k=3):\n",
     "        classes = {}\n",
+    "\n",
+    "        if algo == \"euclidienne\":\n",
+    "            distances = self.euclidienne(data=elem)\n",
+    "        if algo == \"manhattan\":\n",
+    "            distances = self.manhattan(data=elem)\n",
+    "        if algo == \"minkowski\":\n",
+    "            distances = self.minkowski(data=elem)\n",
+    "        if algo == \"cosine\":\n",
+    "            distances = self.cosine(data=elem)\n",
+    "        if algo == \"hamming\":\n",
+    "            distances = self.hamming(data=elem)\n",
+    "        \n",
+    "        distances = self.getK(distances,k)\n",
+    "        \n",
     "        for (i,dist) in distances:\n",
     "\n",
     "            if self.data[i][-1] in classes:\n",
@@ -320,30 +337,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Iris-setosa\\n': 5}"
+       "{2.0: 10}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "knn = Knn(data=np.array(array))\n",
     "\n",
+    "elem = [5.87027027027027,\n",
+    "  1.0864864864864856,\n",
+    "  5.745945945945946,\n",
+    "  3.089189189189189]\n",
     "\n",
-    "knn = Knn(data=array)\n",
+    "# algo can be euclidienne, manhattan, minkowski, cosine, hamming\n",
     "\n",
-    "elem = [5.2, 3.5 , 1.41, 0.25]\n",
-    "\n",
-    "dist = knn.manhattan(data=elem)\n",
-    "\n",
-    "knn.getClass(knn.getK(dist,5))\n"
+    "knn.getClass(elem,algo=\"manhattan\",k=10)\n"
    ]
   }
  ],
