--- a/RI/TPRI/TP2.ipynb
+++ b/RI/TPRI/TP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -22,9 +22,24 @@
      "text": [
       "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
       "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\3450456013.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8240\\3796108596.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1.0,\n",
+       " 5: 0.9972003016602285,\n",
+       " 2: 0.9147850641770632,\n",
+       " 4: 0.8763092969085461,\n",
+       " 3: 0.8554767047195371,\n",
+       " 0: 0}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -153,13 +168,11 @@
     "            idf = 0\n",
     "\n",
     "        return(tf*idf)\n",
-    "\n",
     "    def DictWeight(self):\n",
     "\n",
     "        self.TDFP = [(word,doc,self.dict[(word,doc)],self.calcWeight(word,doc)) for word,doc in self.dict.keys()]\n",
     "        self.DTFP = [(doc,word,freq,weight) for word,doc,freq,weight in self.TDFP]\n",
     "        self.TDFP = sorted(self.TDFP, key=lambda x: x[0])\n",
-    "\n",
     "    def MV(self,termes,typeV = vect.SCALAR):\n",
     "        rsv = {}\n",
     "        termes = self.splitter(termes)\n",
@@ -169,14 +182,16 @@
     "\n",
     "        for doc in range(self.N):\n",
     "            QD = 0\n",
+    "            v2 = 0\n",
+    "            w2 = 0\n",
+    "\n",
     "            for term in normterms:\n",
-    "                v2 = 0\n",
-    "                w2 = 0\n",
     "                if (term.lower(),doc) in self.dict.keys():\n",
     "                    weight = self.calcWeight(term,doc)\n",
     "                    QD+= weight\n",
-    "                    w2+= math.pow(weight,2)\n",
-    "                    v2+=1\n",
+    "                    w2+= weight**2\n",
+    "                    v2+= 1**2\n",
+    "\n",
     "            try:\n",
     "                if typeV == vect.COSINE:\n",
     "                    QD = QD / (math.sqrt(v2)*math.sqrt(w2))\n",
@@ -191,18 +206,22 @@
     "\n",
     "    def bm25(self,termes,K,B):\n",
     "        rsv = {}\n",
+    "        #tokenization de la requete\n",
     "        termes = self.splitter(termes)\n",
     "        normterms = []\n",
     "        dls = {}\n",
-    "\n",
+    "        #normalisation de la requete \n",
     "        for term in termes:\n",
-    "            normterms.append(self.normalize(term))\n",
+    "            normterms.append(self.normalize(term.lower()))\n",
     "\n",
+    "        # calcule nombre termes par doc\n",
     "        for term,doc in self.dict.keys():\n",
     "            if doc in dls.keys():\n",
     "                dls[doc] +=1\n",
     "            else:\n",
     "                dls[doc] = 1\n",
+    "\n",
+    "        # moyenne des termes par doc\n",
     "        avdl = 0\n",
     "        for key in dls.keys():\n",
     "            avdl += dls[key]\n",
@@ -211,32 +230,35 @@
     "        for doc in range(self.N):\n",
     "            QD = 0\n",
     "            for term in normterms:\n",
-    "                if (term.lower(),doc) in self.dict.keys():\n",
+    "                val = 0\n",
+    "                log = 0\n",
+    "                if (term,doc) in self.dict.keys():\n",
     "                    ni = 0\n",
+    "                    \n",
     "                    for doc2 in range(self.N):\n",
     "                        if (term.lower(),doc2) in self.dict.keys():\n",
     "                            ni+=1\n",
     "                    freq = self.dict[(term.lower(),doc)]\n",
-    "\n",
     "                    log = math.log10((self.N - ni + 0.5) / (ni + 0.5))\n",
     "                    val = freq + K*((1-B)+(B*dls[doc]/avdl))\n",
     "                    val = freq/val\n",
-    "                QD+= val\n",
-    "\n",
+    "                QD+= val*log\n",
     "            rsv[doc] = QD\n",
-    "\n",
+    "            \n",
+    "        #trie du dictionnaire\n",
     "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
     "        return rsv\n",
-    "        pass\n",
     "        \n",
     "d = Docs(Lancaster=False,split=True)\n",
+    "d.DictWeight()\n",
     "\n",
-    "d.DictWeight()\n"
+    "d.MV(\"documents ranking\",vect.COSINE)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,15 +267,15 @@
      "text": [
       "Exception in Tkinter callback\n",
       "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
       "    return self.func(*args)\n",
       "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\2165231193.py\", line 37, in on_token_change\n",
+      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_10816\\2165231193.py\", line 37, in on_token_change\n",
       "    search()\n",
-      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\2165231193.py\", line 10, in search\n",
+      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_10816\\2165231193.py\", line 10, in search\n",
       "    table.delete(*table.get_children())\n",
       "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
+      "  File \"d:\\APPS\\python\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
       "    self.tk.call(self._w, \"children\", item or '') or ())\n",
       "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "_tkinter.TclError: invalid command name \".!frame.!treeview\"\n"
