--- a/RI/TPRI/TP4.ipynb
+++ b/RI/TPRI/TP4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6100\\763142252.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -35,17 +25,27 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_12408\\984345633.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "{0: 0,\n",
-       " 2: -0.3985143240716214,\n",
-       " 1: -0.4209311042428931,\n",
-       " 5: -0.4245830027506067,\n",
-       " 4: -0.44015611513887976,\n",
-       " 3: -0.504561305292754}"
+       " 1: -0.4569583334441093,\n",
+       " 2: -0.46563779470715644,\n",
+       " 5: -0.4754184044290098,\n",
+       " 4: -0.5021598014529579,\n",
+       " 3: -0.5436172154332021}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,8 +233,7 @@
     "        for key in dls.keys():\n",
     "            avdl += dls[key]\n",
     "        avdl = avdl / len(dls.keys())\n",
-    "        print(dls)\n",
-    "        print(avdl)\n",
+    "\n",
     "        for doc in range(self.N):\n",
     "            QD = 0\n",
     "            for term in normterms:\n",
@@ -261,12 +260,12 @@
     "\n",
     "d.DictWeight()\n",
     "\n",
-    "d.bm25(\"document ranking\",2.0,1.5)"
+    "d.bm25(\"document ranking\",1.5,0.75)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +279,7 @@
        " 0: 0}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
