--- a/RI/TPRI/Project.ipynb
+++ b/RI/TPRI/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "text": [
       "<>:79: SyntaxWarning: invalid escape sequence '\\.'\n",
       "<>:79: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13636\\2896389345.py:79: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_1344\\294919975.py:79: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
     }
@@ -243,16 +243,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/LancasterSplit_DTFP.csv\",index_col=0)\n"
+    "\n",
+    "\n",
+    "import ast\n",
+    "import pandas as pd\n",
+    "\n",
+    "file = open(\"./txt/LancasterSplit_TDFP.txt\").read()\n",
+    "file = file.split(\"\\n\")\n",
+    "result_tuple = []\n",
+    "for row in file:\n",
+    "    result_tuple.append(ast.literal_eval(row))\n",
+    "\n",
+    "df = pd.DataFrame(result_tuple,columns=[\"Mot\",\"Doc\",\"Freq\",\"Poids\"])\n",
+    "df.to_csv(\"./data/LancasterSplit_TDFP.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
